...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/particularDrinkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/titleForDrinkTitle"
        android:width="260dp"
        android:maxLength="64"
...
        android:text="Description:"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/particularDrinkDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/titleForDrinkDescription"
        app:layout_constraintTop_toBottomOf="@id/changeParticularDrinkImage"

        android:width="280dp"
...
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="mg of Caffeine: "
        android:textSize="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/particularDrinkCaffeineContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/particularDrinkDescription"
        app:layout_constraintLeft_toRightOf="@id/titleForCaffeineContent"
        android:inputType="number"
        android:text="100"
...
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="Type of Drink: "/>

    <Spinner
        android:id="@+id/particularDrinkType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleForCaffeineContent"
        app:layout_constraintLeft_toRightOf="@id/titleForDrinkType"
        android:entries="@array/drinkType"
        android:layout_margin="10dp"/>
...
        android:text="Price: "
        android:padding="10dp"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/particularDrinkPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleForDrinkType"
        app:layout_constraintLeft_toRightOf="@id/titlefoDrinkPrice"
        android:inputType="number"
        android:maxLength="9"
...
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Discount: "
        android:padding="10dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/particularDrinkDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titlefoDrinkPrice"
        app:layout_constraintLeft_toRightOf="@id/titleforDrinkDiscount"
        android:inputType="number"
        android:maxLength="9"
...

    <Button
        android:id="@+id/particularDrinkDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/particularDrinkCancelButton"
        app:layout_constraintRight_toRightOf="@id/particularDrinkSaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Delete Drink"
        android:background="@drawable/border_radius_button"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/particularDrinkSaveButton"
...
