...
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Configure Menu" />

            <Button
                android:id="@+id/accessMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:text="Edit Menu" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:visibility="visible"
            android:layout_width="match_parent"
...
