...
    <string name="sign_in_m">Sign in as a Merchant</string>
    <string name="sign_in_c">Sign in as a Customer</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_account_failed">Associate a Google account with this device</string>
    <string name="navMapPageTitle">Map</string>
    <string name="navSettingsPageTitle">Settings</string>
    <string name="navPlotScreen">Plot Screen</string>
    <string name="navDeliveryList">Delivery List</string>
    <string name="navDeliveryStatus">Delivery Status</string>
    <string name="navLogout">Log Out</string>
    <string name="settingsUserName">Name</string>
    <string name="add_menu">Add Menu</string>

...
