...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay1"
            android:orientation="vertical">
            <ListView
                android:id="@+id/listoforders"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:nestedScrollingEnabled="true"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
...
